--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,30 +1,37 @@
 .Hero{
     width: 100%;
     height: 100vh;
-    background-image: url(./../../assets/Images/Heroimg.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
     position: relative;
 }
-.Hero .Title{
+.Hero2{
+    width: 100%;
+    height: 70vh;
+    position: relative;
+}
+.background{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -99;
+}
+.Hero .Title ,.Hero2 .Title{
     position: absolute;
     top: 55%;
     left: 50%;
     transform: translate(-50%,-50%);
     text-align: center;
 }
-.Hero .Title h2{
+.Hero .Title h2,.Hero2 .Title h2{
     color: #fff;
     font-size: 3rem;
     font-weight: 800;
 }
-.Hero .Title p{
+.Hero .Title p, .Hero2 .Title p{
     color: #fff;
     font-size: 1.3rem;
     padding: 1rem  2rem;
 }
-.Hero .Title button{
+.Hero .Title button, .Hero2 .Title button{
     background: #fff;
     border-radius: 6px;
     color: #222;
