--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -22,7 +22,7 @@
 .Af-Navbar .section-2{
     display: flex;
 }
-.Af-Navbar .section-2 button{
+.Af-Navbar .section-2 button {
     border: none;
     border-radius: .3rem;
     cursor: pointer;
@@ -30,6 +30,10 @@
     font-weight: 600;
     padding: .5rem 1rem;
     transition: all .2s ease-in-out;
+}
+.Af-Navbar .section-2 button a{
+    text-decoration: none;
+    color: inherit;
 }
 .Af-Navbar .section-2 button:hover{
 background-color: #222;
@@ -41,8 +45,7 @@ color: white;
     align-items: center;
 
 }
-
-.Menu li{
+.Menu li {
     color: #222;
     font-size: 1.2rem;
     font-weight: 600;
@@ -50,7 +53,77 @@ color: white;
     margin: 0 10px;
     display: flex;
     align-items: center;
+    flex-wrap: nowrap;
+    
 }
-.Menu li svg{
-    margin-right: 10px;
+.Menu li a{
+    color: #222;
+    text-decoration: none;
+}
+.Menu li i{
+    /* margin-right: 10px; */
+    color: black;
+    padding-right: 10px;
+}
+.menu-toggle{
+    display: none;
+    background: none; 
+    border: none; 
+    font-size: 24px; 
+    cursor: pointer; 
+    color: #222; 
+    margin-left: 20px; 
+}
+
+.signup-btn{
+    border: none;
+    border-radius: .3rem;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 600;
+    padding: .5rem 1rem;
+    transition: all .2sease-in-out;
+    white-space: nowrap;
+}
+/* Media Queries for Responsive Design */
+@media (max-width: 992px) {
+    .Af-Navbar {
+        align-items: center;
+        height: auto;
+        padding: 10px;
+
+    }
+    .menu-toggle{
+        display: block;
+    }
+    .Menu {
+        flex-direction: column;
+        width: 100%;
+        padding: 10px 0;
+        display: none;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        background-color: white;
+        box-shadow: 0 5px 5px rgba(0,0,0,.15);
+        z-index: 9998;
+}
+
+    .Menu.active {
+        display: flex; 
+        justify-content: center;
+        align-items: center;
+    }
+
+    .Af-Navbar .section-2 {
+        flex-direction: column; 
+        align-items: flex-start; 
+        margin-top: 10px; 
+    }
+
+    .Menu li {
+        text-align: center; 
+    }
 }
