--- a/src/components/PopularCard/PopularCard.css
+++ b/src/components/PopularCard/PopularCard.css
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
     margin-top: 4.5rem;
 }
 .singleCardReverse{
@@ -9,6 +11,8 @@
     justify-content: space-between;
     flex-direction: row-reverse;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
     margin-top: 4.5rem;
 }
 .Side-1{
@@ -31,6 +35,7 @@
 .Side-2 img{
     height: 350px;
     border-radius: 6px;
+    object-fit: cover;
 }
 .Side-2 img:nth-child(1){
     width: 49%;
@@ -41,6 +46,21 @@
     position: absolute;
     top: -10px;
     right: 0;
-
-
+}
+@media (max-width:900px){
+    .singleCard{
+        flex-direction: column-reverse;
+    }
+    .singleCardReverse{
+        flex-direction: column-reverse;
+    }
+    .Side-1{
+        width: 100%;
+    }
+    .Side-2{
+        width: 100%;
+    }
+    .Side-2 img{
+        height: 250px;
+    }
 }
